# mortality-statsmodel

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  car.py  linear.R  nested.py  pyproject.toml
.github/workflows/: format.yml
Data/: mortsim.csv  mortsim_hf.csv
Data/GIS/: EW_LSOA2011_popwcentroids.csv  EW_MSOA2011_popwcentroids.csv  ldn_LSOA2011_BFC.json
Data/Inits/: LSOA1_T_inits.rds  LSOA1_inits.rds  MSOA1_T_inits.rds  MSOA1_inits.rds
Data/Mortality/: LSOA_hf_age.npy  LSOA_hf_deaths.npy  LSOA_hf_s1.npy  LSOA_hf_s2.npy  LSOA_hf_t.npy  LSOA_male_a.npy  LSOA_male_population.npy  LSOA_male_s1.npy  LSOA_male_year.npy
Models/: BYM.R  BYM2.R  GP.R  README.md  hier.R  linear.R  mortGPflow.ipynb  spatial_hier.R  spatial_hier_age.R  spatial_random.R
Models/nonparametric/: GPyTorch_test.ipynb  gam.R  mortGPflow.ipynb  mortGPyTorch.ipynb
Models/parametric/: BYM.bug  GP.bug  inits.R  inits_run.sh  nested-SVI.py  nested.bug  nested.py  nested_betabin.R  nested_numpyro.py  nested_numpyro1.py  nested_numpyro2.py  nimble_model.R  nimble_model_debug.R  path_info.R  (+6 more)
Output/: README.md  analysis_chain.R  analysis_utils.R  le_fig_BYM_nb.html  le_fig_hier_nb.html  linear_mcmc_out.rds  mcmc_diagnose.R  mr2le.R  period_life_table.R  process_le.R  spatial_hier_mcmc_out.rds  spatial_random_mcmc_out.rds  unlograte.R  view_widgets.html
Tools/: period_life_table.R  period_life_table_old.R
mortality_statsmodel/: BYM.bug  car.py  house_price.R  inits.R  nested.bug  nested.py  nested_bb.bug  nimble_model.R  prepare_model.R  run_model.R
renv/: activate.R
(+9 files in other folders)
